<resources>
    <!-- General -->
    <string name="app_name">BoardGamesTools</string>

    <!-- Utilities -->
    <string name="tossDice"> Toss Dice </string>
    <string name="numOfDice"> Number of dices to roll </string>
    <string name="game_visual_description">Button with a game to be played</string>

    <!-- GameLogic -->
    <string name="save"> Save </string>
    <string name="load"> Load </string>
    <string name="game_saved"> Game Saved </string>
    <string name="no_game_saved"> No game saved </string>
    <string name="game_loaded"> Game Loaded </string>
    <string name="pass_turn"> Pass Turn </string>
    <string name="round"> Round #%1$d </string>
    <string name="next_round"> Next Round </string>
    <string name="finish_round"> Finish Round </string>
    <string name="round_End"> "Round End" </string>
    <string name="end_game"> End Game </string>
    <string name="backToGame"> Return to the game </string>
    <string name="player_lose"> Player Lose </string>
    <string name="player_win"> Player Win </string>
    <string name="game_continue"> Game continue </string>
    <string name="game_start"> Game Start </string>
    <string name="reset_game"> Reset Game </string>

    <!-- Players -->
    <string name="new_players"> New Players </string>
    <string name="player_name"> Player name… </string>
    <string name="score"> Score </string>
    <string name="reset_score"> Reset score </string>
    <string name="no_players">"There have to be 1 or more players"</string>
    <string name="no_player_to_reset">"There is no players to be reset"</string>
    <string name="delete_dialog_title">" Delete ?"</string>
    <string name="confirm_player_delete"> Are you sure to delete the player: %1$s </string>
    <string name="delete_dialog_yes"> Yes </string>
    <string name="delete_dialog_no"> No </string>
    <string name="cancel"> Cancel </string>
    <string name="modify"> Modify </string>
    <string name="addButton"> Add Player </string>
    <string name="delete"> Delete </string>

    <!-- Triomino -->
    <string name="turn_points">Turn Points</string>
    <string name="combo_points">Combo Points</string>
    <string name="punish_points">Punish Points</string>
    <string name="residual_points">"Residual points: "</string>
    <string name="round_end_phase">Round #%1$d end phase</string>
    <string name="add"> Add </string>
    <string name="no_extra_points"> Missing extra points </string>
    <string name="players_extra_points"> Players Extra points </string>

    <string-array name="sp_penalties_options">
        <item>0</item>
        <item>5</item>
        <item>10</item>
        <item>25</item>
    </string-array>

    <string-array name="sp_turn_options">
        <item>"0"</item>
        <item>"1"</item>
        <item>"2"</item>
        <item>"3"</item>
        <item>"4"</item>
        <item>"5"</item>
        <item>"6"</item>
        <item>"7"</item>
        <item>"8"</item>
        <item>"9"</item>
        <item>"10"</item>
        <item>"11"</item>
        <item>"12"</item>
        <item>"13"</item>
        <item>"14"</item>
        <item>"15"</item>
    </string-array>

    <string-array name="sp_bonus_options">
        <item>0</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>80</item>
        <item>120</item>
    </string-array>

    <!-- Craps game -->
    <string name="take_turn"> Take turn !</string>
    <string name="target_score"> Target score = %1$d </string>
    <string name="you_win_if_get7or11"> Win if get 7 or 11 </string>
    <string name="you_lose_if_get2or3or12"> Lose if get a 2 – 3 – 12 </string>
    <string name="you_win_if_target_score"> Win if get the same target score </string>
    <string name="you_lose_if_get7"> Lose if get a 7 </string>
    <string name="blabla_enter_blabla">%1$s\n%2$s</string>
    <string name="triomino_ranking_image_description">Image to show the current player position</string>
    <string name="dice_description">A dice</string>

    <!-- Chess Clock -->
    <string name="checkmate">Checkmate !</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>


</resources>