<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/chessPlayer1Timer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:ems="10"
            android:padding="8dp"
            android:rotation="180"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="100sp"
            android:textStyle="italic|bold"
            tools:text="30:00" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_weight="0.2"
            android:gravity="center"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginHorizontal="8dp">

                <Button
                    android:id="@+id/chessButton"
                    android:layout_width="180dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"
                    android:rotation="-90"
                    android:text="@string/checkmate"
                    android:textColor="@color/design_default_color_on_primary"
                    android:textSize="18sp" />
            </FrameLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="8dp"
                android:gravity="center">

                <RadioButton
                    android:id="@+id/chessPlayer1Switch"
                    android:layout_width="160dp"
                    android:layout_height="80dp"
                    android:layout_marginVertical="8dp"
                    android:background="@color/primaryDark"
                    android:gravity="center"
                    android:paddingHorizontal="8dp"
                    android:rotation="180"
                    android:text="@string/player_1"
                    android:textColor="@color/onPrimary"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/chessPlayer2Switch"
                    android:layout_width="160dp"
                    android:layout_height="80dp"
                    android:layout_marginVertical="8dp"
                    android:background="@color/primaryDark"
                    android:gravity="center"
                    android:paddingHorizontal="8dp"
                    android:text="@string/player_2"
                    android:textColor="@color/onPrimary"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:id="@+id/chessPlayer2Timer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:ems="10"
            android:padding="8dp"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="100sp"
            android:textStyle="italic|bold"
            tools:text="30:00" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>